# cs189

homework/hw1/: fashion-pt-1.ipynb
homework/hw1/code/: .gitignore  fashion-pt-1.ipynb  fashion-pt-2.ipynb  pyproject.toml
